# AGENTIC_AI

./: README.md
AI_LEARNING/: README.MD
AI_LEARNING/LEARNING_WITH_ONLINE_CLASS/Essential Linux Commands/: notes.txt
AI_LEARNING/LEARNING_WITH_ONLINE_CLASS/LACTURES/: notes.txt
AI_LEARNING/LEARNING_WITH_ONLINE_CLASS/OPEN_ROUTER/: README.md  app.py  main.py  pyproject.toml
AI_LEARNING/LEARNING_WITH_ONLINE_CLASS/PRACTICE_CODE/: .env  chatbott.py  main.py  pyproject.toml
AI_LEARNING/learning_by_online_class/CUSTOM_GPT/: NOTES.txt
AI_LEARNING/learning_with_piaic/INTRODUCTION_OK_SDK/: README.MD
AI_LEARNING/learning_with_piaic/PRESENTATION_OF_AGENTIC_AI/: MY_NOTES.TXT
BACKEND_AGENTIC_AI/LERNFASTAPI/: NOTES.txt  crudapi.py  dependency.py  main.py  pyproject.toml  test_main.py
DATABSE/MYSQL/: .env  .python-version  README.md  main.py  my_notes.txt  pyproject.toml
DATABSE/POSGRASQL/: README.md  main.py  my_notes.txt  pyproject.toml
DATABSE/SQULITE/: README.md  main.py  my_notes.txt  my_squlite.db  my_squlite_db  pyproject.toml
LLM/Learning/: README.md  app.py  pyproject.toml
MCP/: LUCTURE.txt
PRACTICE/PIAIC/UV_00/: README.md  pyproject.toml
PRACTICE/PIAIC/UV_00/src/uv_00/: __init__.py
PROMPT_ENGINEERING/: notes.txt
dokar/: notes.txt
n8n/: nots.txt
n8n/first_storage/: config  database.sqlite
n8n/langsmith_for_debag/: notes.txt
n8n/workflows/: My workflow 3.json  email_draft.json  frontnd_backnd_database.json  nathan-level-one.json  stuendt-email-agent_frontnd (1).json
vibe_coden_notes/: notes.txt
yaml_basic_notes/: pp.yaml
(+100 files in other folders)
