[project]
name = "uv-00"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FAIZANAAZ779", email = "faixanaaz@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
uv-00 = "uv_00:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
